[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
name = "pat_tools"
version = "0.1.4"
description = "simple utility functions for the patreon project"
authors = ["Your Name <your@email.com>"]
license = "MIT"
packages = [
{include="pat_tools"}]
[tool.poetry.dependencies]
python = "^3.9"
